[package]
name = "sugarfunge-cli-connect"
authors = ["JonathanJFlores <jmejia98f@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version= "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
wee_alloc = "0.4"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_urlencoded = "0.7"
log = "0.4.14"
wasm-logger = "0.2.0"
uuid = {version = "0.8", features = ["serde", "v4", "v5", "wasm-bindgen"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1"
gloo-storage = "0.2.0"
base64 = "0.4"
anyhow = "1"

[dependencies.web-sys]
verion = "0.3.56"
features = [
    "Window", 
    "Document", 
    "HtmlElement", 
    "HtmlButtonElement", 
    'EventTarget',
    "Node", 
    "Text", 
    "HtmlInputElement", 
    "Event",
    "Request",
    "RequestInit",
    "RequestCredentials",
    "RequestMode",
    "Response",
    "Headers"
]
